--- a/trials.ipynb
+++ b/trials.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = '93a166e6-ac78-43e6-a412-f7553b30e282'\n",
-    "PINECONE_API_ENV = 'gcp-starter' #using https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2 for embedding this model consists as 384 dim"
+    "PINECONE_API_KEY = 'xxxxxxxxxxxxxxxxxxxxxx'\n",
+    "PINECONE_API_ENV = 'xxxxxxxxxxxxxx' #using https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2 for embedding this model consists as 384 dim"
    ]
   },
   {
